# Cursor-Vibes

./: .cursorignore  .env.example  .env.tpl  .gitattributes  .gitignore  CODEOWNERS  LICENSE  Makefile  README.md  SECURITY.md  UX_RESEARCH.md  api.py  go.mod  go.sum  main.py  requirements.txt  run-go.sh  run.py
.github/workflows/: ci.yml  release.yml  security.yml
ai/: app.py  chains.py  requirements.txt  schemas.py  test_trace.py
cmd/api/: ai_handler.go  clientip_test.go  filter_test.go  main.go  main_helpers_test.go  middleware.go  middleware_test.go
cmd/scan/: main.go
docs/: API_CALL_BREAKDOWN.md  REPO_DESCRIPTION.txt  SECURE_DEFAULTS.md  SECURITY_CONTROLS.md  SECURITY_PERFORMANCE_AUDIT.md  design.md  ops-lite.md
docs/decisions/: 0001-why-go-api.md  0002-why-rust-binary.md  0003-threat-model-scope.md  0004-anomaly-detection-limitations.md
docs/security/: threat-model.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
frontend/e2e/: dashboard.spec.ts
frontend/src/: App.tsx  index.css
internal/aggregator/: aggregator.go  aggregator_test.go
internal/aiclient/: client.go
internal/cache/: cache.go  file_store.go  sqlite_store.go  store.go
internal/config/: config.go  config_test.go
internal/edgar/: client.go
rust-core/: Cargo.toml
rust-core/src/: anomaly.rs  lib.rs  main.rs  models.rs  trend.rs
scripts/: demo.sh  prepopulate_cache.py  set_github_description.sh  yahoo_fetch.py
src/: __init__.py  aggregator.py  config.py  models.py
static/: app.js  dashboard.html  dashboard.js  index.html
(+41 files in other folders)
