[package]
name = "vibes-core"
version = "0.1.0"
edition = "2021"
description = "S&P 500 insider selling anomaly detection - high-performance core"
license = "MIT"

[[bin]]
name = "vibes-anomaly"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
